fix label alignment, show loading when start typing

--- a/solution/src/components/Inputs/TextInput.module.css
+++ b/solution/src/components/Inputs/TextInput.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
+  justify-content: center;
+  align-items: center;
 }
 .label {
   width: 100%;
